--- a/responsive-news-site/webroot/css/menu.css
+++ b/responsive-news-site/webroot/css/menu.css
@@ -130,4 +130,15 @@ body > [type="checkbox"]:checked ~ header label {
   body > nav > ul li {
     margin-block-start: 1rem;
   }
+   .image {
+     margin-inline-start: 2rem;
+     margin-block-end: 2.5rem;
+     margin-block-start: -4rem;
+     margin-inline-end: 1rem;
+   }
+
+  span {
+    visibility: hidden;
+  }
+
 }
